syntax = "proto3";

package payment_service;

option go_package = "github.com/fidesy-pay/payment-service;payment_service";

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc CheckPayment(CheckPaymentRequest) returns (CheckPaymentResponse);
}

enum Chain {
  UNKNOWN_CHAIN = 0;
  POLYGON = 1;
}

enum Token {
  UNKNOWN_TOKEN = 0;
  MATIC = 1;
}

message CreatePaymentRequest {
  double amount = 1;
  Chain chain = 2;
  Token token = 3;
}

message CreatePaymentResponse {
  // payment identifier
  string id = 1;
  // address
  string address = 2;
}

message CheckPaymentRequest {
  // payment identifier
  string id = 1;
}

enum PaymentStatus {
  UNKNOWN_STATUS = 0;
  PENDING = 1;
  FAILED = 2;
  SUCCESS = 3;
}

message CheckPaymentResponse {
  PaymentStatus status = 1;
}